(add): Agregando archivos de prueba, configurando entorno

--- a/lepiter/lepiter.properties
+++ b/lepiter/lepiter.properties
@@ -1,4 +1,5 @@
 {
 	"uuid" : "2ef15e5f-fbfa-0d00-a558-a6a5077d4a05",
-	"schema" : "4.1"
+	"schema" : "4.1",
+	"databaseName" : "jesus-acev/gt-cosas/lepiter"
 }
